Fix navigation bar spacing gap

--- a/js/angular/app/styles/partials/_header.scss
+++ b/js/angular/app/styles/partials/_header.scss
@@ -29,6 +29,7 @@ header {
   color: #fff;
   font-size: $h4;
   min-width: 13.9rem;
+  margin-left: -.3rem;
   padding: 1.6rem 1.2rem 1.5rem 2.4rem;
   border-right: 1px solid #fff;
   cursor: pointer;
